I added a crosshair and part of the script for the projectiles

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Purple Skies/purpleSkies/scenes/Weapons/Sword.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Purple Skies/", "res://Purple Skies/scripts (unused)/", "res://Purple Skies/purpleSkies/", "res://Purple Skies/purpleSkies/scripts/", "res://Purple Skies/purpleSkies/scenes/", "res://Purple Skies/purpleSkies/scenes/Weapons/")
+dock_filesystem_selected_paths=PackedStringArray("res://Purple Skies/scripts (unused)/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Purple Skies/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,8 +19,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=269
+dock_hsplit_3=-269
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Purple Skies/purpleSkies/scenes/Player.tscn", "res://Purple Skies/purpleSkies/scenes/platform.tscn", "res://Purple Skies/purpleSkies/scenes/Weapons/Sword.tscn", "res://Purple Skies/purpleSkies/scenes/testGame.tscn", "res://Purple Skies/purpleSkies/scenes/Weapons/Bow.tscn")
-current_scene="res://Purple Skies/purpleSkies/scenes/Weapons/Bow.tscn"
+open_scenes=PackedStringArray()
+current_scene=""
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -39,12 +39,12 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 24)
+position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://Purple Skies/purpleSkies/scripts/bow.gd", "res://Purple Skies/purpleSkies/scripts/camera_2d.gd", "res://Purple Skies/purpleSkies/scripts/collision_shape_2d.gd", "res://Purple Skies/purpleSkies/scripts/player.gd", "res://Purple Skies/purpleSkies/scripts/sprite_2d.gd", "res://Purple Skies/purpleSkies/scripts/test_game.gd"]
-selected_script="res://Purple Skies/purpleSkies/scripts/bow.gd"
+open_scripts=[]
+selected_script=""
 open_help=["Node"]
 script_split_offset=200
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 1932, 1127)
+floating_window_rect=Rect2i(0, 0, 1936, 1139)
 floating_window_screen=0
 
 [ShaderEditor]
