--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,5 +5,5 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Purple Skies/purpleSkies/scripts/sprite_2d.gd"
+"path": "res://Purple Skies/scripts/sprite_2d.gd"
 }]
