--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,8 +38,9 @@ selected_bottom_panel_item=0
 [EditorWindow]
 
 screen=0
-mode="maximized"
-position=Vector2i(0, 24)
+mode="windowed"
+position=Vector2i(384, 192)
+size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
