--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Purple Skies/scenes/Weapons/Arrow.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Purple Skies/scenes/enemy.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Purple Skies/", "res://Purple Skies/scripts/", "res://Purple Skies/scenes/", "res://Purple Skies/scenes/Weapons/", "res://Assets/", "res://addons/")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Purple Skies/scenes/testGame.tscn", "res://Purple Skies/scenes/EnemyBlock.tscn", "res://Purple Skies/scenes/Player.tscn", "res://Purple Skies/scenes/healthBar.tscn", "res://Purple Skies/scenes/Weapons/Bow.tscn", "res://Purple Skies/scenes/Weapons/Arrow.tscn", "res://Purple Skies/scenes/Weapons/crosshair.tscn")
-current_scene="res://Purple Skies/scenes/Weapons/Arrow.tscn"
+open_scenes=PackedStringArray("res://Purple Skies/scenes/testGame.tscn", "res://Purple Skies/scenes/EnemyBlock.tscn", "res://Purple Skies/scenes/Player.tscn", "res://Purple Skies/scenes/healthBar.tscn", "res://Purple Skies/scenes/Weapons/Bow.tscn", "res://Purple Skies/scenes/Weapons/Arrow.tscn", "res://Purple Skies/scenes/Weapons/crosshair.tscn", "res://Purple Skies/scenes/enemy.tscn", "res://Purple Skies/scenes/platform.tscn")
+current_scene="res://Purple Skies/scenes/Weapons/Bow.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,15 +38,15 @@ selected_bottom_panel_item=0
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(384, 192)
+mode="maximized"
+position=Vector2i(0, 24)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Purple Skies/scripts/arrow.gd", "res://Purple Skies/scripts/ArrowHitbox.gd", "res://Purple Skies/scripts/bow.gd", "res://Purple Skies/scripts/camera_2d.gd", "res://Purple Skies/scripts/Crosshair.gd", "res://Purple Skies/scripts/enemyBlockHitbox.gd", "res://Purple Skies/scripts/Health.gd", "res://Purple Skies/scripts/player.gd", "res://README.md"]
-selected_script="res://Purple Skies/scripts/arrow.gd"
-open_help=["Node"]
+open_scripts=["res://Purple Skies/scripts/arrow.gd", "res://Purple Skies/scripts/bow.gd", "res://Purple Skies/scripts/Crosshair.gd", "res://Purple Skies/scenes/enemy.gd"]
+selected_script="res://Purple Skies/scripts/bow.gd"
+open_help=[]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=0.9999999
