added enemyBlock, stopSpin functions, fixed most hitbox issues

--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -5,3 +5,7 @@ groups=[&"player"]
 [res://Purple Skies/scenes/testGame.tscn]
 
 groups=[&"floor"]
+
+[res://Purple Skies/scenes/Weapons/Arrow.tscn]
+
+groups=[&"arrows"]
