--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Purple Skies/scenes/enemy.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Purple Skies/scripts/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Purple Skies/", "res://Purple Skies/scripts/", "res://Purple Skies/scenes/", "res://Purple Skies/scenes/Weapons/", "res://Assets/", "res://addons/")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=170
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Purple Skies/scenes/testGame.tscn", "res://Purple Skies/scenes/EnemyBlock.tscn", "res://Purple Skies/scenes/Player.tscn", "res://Purple Skies/scenes/healthBar.tscn", "res://Purple Skies/scenes/Weapons/Bow.tscn", "res://Purple Skies/scenes/Weapons/Arrow.tscn", "res://Purple Skies/scenes/Weapons/crosshair.tscn", "res://Purple Skies/scenes/enemy.tscn", "res://Purple Skies/scenes/platform.tscn")
-current_scene="res://Purple Skies/scenes/Weapons/Bow.tscn"
+current_scene="res://Purple Skies/scenes/enemy.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -44,8 +44,8 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Purple Skies/scripts/arrow.gd", "res://Purple Skies/scripts/bow.gd", "res://Purple Skies/scripts/Crosshair.gd", "res://Purple Skies/scenes/enemy.gd"]
-selected_script="res://Purple Skies/scripts/bow.gd"
+open_scripts=["res://Purple Skies/scripts/area_2d.gd", "res://Purple Skies/scripts/arrow.gd", "res://Purple Skies/scripts/bow.gd", "res://Purple Skies/scripts/camera_2d.gd", "res://Purple Skies/scripts/Crosshair.gd", "res://Purple Skies/scripts/enemy.gd", "res://Purple Skies/scripts/enemyBlockHitbox.gd", "res://Purple Skies/scripts/enemycollision.gd", "res://Purple Skies/scripts/enemy_blockSS.gd", "res://Purple Skies/scripts/stopSpin/platform.gd", "res://Purple Skies/scripts/player.gd"]
+selected_script="res://Purple Skies/scripts/enemy.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
