--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,9 +1,1 @@
-list=[{
-"base": &"Node2D",
-"class": &"equipItem",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Purple Skies/scripts/sprite_2d.gd"
-}]
+list=[]
