added debug text

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Purple Skies/", "res://Purple Skies/scripts/", "res://Purple Skies/scripts/stopSpin/", "res://Purple Skies/scenes/", "res://Purple Skies/scenes/Weapons/", "res://Assets/", "res://addons/")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Purple Skies/scenes/testGame.tscn", "res://Purple Skies/scenes/EnemyBlock.tscn", "res://Purple Skies/scenes/Player.tscn", "res://Purple Skies/scenes/healthBar.tscn", "res://Purple Skies/scenes/Weapons/Bow.tscn", "res://Purple Skies/scenes/Weapons/Arrow.tscn", "res://Purple Skies/scenes/Weapons/crosshair.tscn", "res://Purple Skies/scenes/enemy.tscn", "res://Purple Skies/scenes/platform.tscn", "res://Purple Skies/scenes/Weapons/Sword.tscn")
-current_scene="res://Purple Skies/scenes/Weapons/Bow.tscn"
+current_scene="res://Purple Skies/scenes/enemy.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -45,7 +45,7 @@ size=Vector2i(1152, 648)
 [ScriptEditor]
 
 open_scripts=["res://Purple Skies/scripts/area_2d.gd", "res://Purple Skies/scripts/arrow.gd", "res://Purple Skies/scripts/ArrowHitbox.gd", "res://Purple Skies/scripts/bow.gd", "res://Purple Skies/scripts/camera_2d.gd", "res://Purple Skies/scripts/Crosshair.gd", "res://Purple Skies/scripts/enemy.gd", "res://Purple Skies/scripts/enemyBlockHitbox.gd", "res://Purple Skies/scripts/enemycollision.gd", "res://Purple Skies/scripts/enemy_blockSS.gd", "res://Purple Skies/scripts/Health.gd", "res://Purple Skies/scripts/stopSpin/platform.gd", "res://Purple Skies/scripts/player.gd", "res://Purple Skies/scripts/sword.gd", "res://Purple Skies/scenes/Weapons/sword.gd", "res://Purple Skies/scenes/Weapons/swordHitbox.gd"]
-selected_script="res://Purple Skies/scripts/bow.gd"
+selected_script="res://Purple Skies/scripts/enemy.gd"
 open_help=["Node"]
 script_split_offset=200
 list_split_offset=0
