--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,9 +28,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Purple Skies/scenes/testGame.tscn", "res://Purple Skies/scenes/EnemyBlock.tscn", "res://Purple Skies/scenes/Player.tscn", "res://Purple Skies/scenes/healthBar.tscn", "res://Purple Skies/scenes/Weapons/Bow.tscn", "res://Purple Skies/scenes/Weapons/Arrow.tscn", "res://Purple Skies/scenes/Weapons/crosshair.tscn", "res://Purple Skies/scenes/enemy.tscn", "res://Purple Skies/scenes/platform.tscn", "res://Purple Skies/scenes/Weapons/Sword.tscn")
-current_scene="res://Purple Skies/scenes/enemy.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Purple Skies/scenes/testGame.tscn", "res://Purple Skies/scenes/EnemyBlock.tscn", "res://Purple Skies/scenes/Player.tscn", "res://Purple Skies/scenes/healthBar.tscn", "res://Purple Skies/scenes/Weapons/Bow.tscn", "res://Purple Skies/scenes/Weapons/Arrow.tscn", "res://Purple Skies/scenes/Weapons/crosshair.tscn", "res://Purple Skies/scenes/enemy.tscn", "res://Purple Skies/scenes/platform.tscn", "res://Purple Skies/scenes/Weapons/Sword.tscn", "res://Purple Skies/scenes/debugWindow.tscn")
+current_scene="res://Purple Skies/scenes/Player.tscn"
+center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -44,8 +44,8 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://Purple Skies/scripts/area_2d.gd", "res://Purple Skies/scripts/arrow.gd", "res://Purple Skies/scripts/ArrowHitbox.gd", "res://Purple Skies/scripts/bow.gd", "res://Purple Skies/scripts/camera_2d.gd", "res://Purple Skies/scripts/Crosshair.gd", "res://Purple Skies/scripts/enemy.gd", "res://Purple Skies/scripts/enemyBlockHitbox.gd", "res://Purple Skies/scripts/enemycollision.gd", "res://Purple Skies/scripts/enemy_blockSS.gd", "res://Purple Skies/scripts/Health.gd", "res://Purple Skies/scripts/stopSpin/platform.gd", "res://Purple Skies/scripts/player.gd", "res://Purple Skies/scripts/sword.gd", "res://Purple Skies/scenes/Weapons/sword.gd", "res://Purple Skies/scenes/Weapons/swordHitbox.gd"]
-selected_script="res://Purple Skies/scripts/enemy.gd"
+open_scripts=["res://Purple Skies/scripts/area_2d.gd", "res://Purple Skies/scripts/arrow.gd", "res://Purple Skies/scripts/ArrowHitbox.gd", "res://Purple Skies/scripts/bow.gd", "res://Purple Skies/scripts/camera_2d.gd", "res://Purple Skies/scripts/Crosshair.gd", "res://Purple Skies/scripts/debugWindow.gd", "res://Purple Skies/scripts/enemy.gd", "res://Purple Skies/scripts/enemyBlockHitbox.gd", "res://Purple Skies/scripts/enemycollision.gd", "res://Purple Skies/scripts/enemy_blockSS.gd", "res://Purple Skies/scripts/Health.gd", "res://Purple Skies/scenes/infoWindow.gd", "res://Purple Skies/scripts/stopSpin/platform.gd", "res://Purple Skies/scripts/player.gd", "res://Purple Skies/scripts/sword.gd", "res://Purple Skies/scenes/Weapons/sword.gd", "res://Purple Skies/scenes/Weapons/swordHitbox.gd"]
+selected_script="res://Purple Skies/scripts/player.gd"
 open_help=["Node"]
 script_split_offset=200
 list_split_offset=0
@@ -53,7 +53,7 @@ zoom_factor=0.9999999
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 151, 1164, 695)
+floating_window_rect=Rect2i(0, 24, 1920, 1008)
 floating_window_screen=0
 
 [ShaderEditor]
@@ -62,3 +62,13 @@ open_shaders=[]
 split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
